--- a/css/styles.css
+++ b/css/styles.css
@@ -18,3 +18,4 @@
 @import 'components/review-list.css';
 @import 'components/user-msg.css';
 @import 'components/ribbon.css';
+@import 'components/home-page.css';
