added footer and UI update

--- a/css/components/book-list.css
+++ b/css/components/book-list.css
@@ -2,6 +2,7 @@
   grid-template-columns: repeat(auto-fit, 225px);
   gap: 1rem;
   justify-content: center;
+  padding-bottom: 64px;
 }
 
 .book-preview-container {
