--- a/css/styles.css
+++ b/css/styles.css
@@ -19,3 +19,4 @@
 @import 'components/user-msg.css';
 @import 'components/ribbon.css';
 @import 'components/home-page.css';
+@import 'components/footer.css';
