--- a/css/styles.css
+++ b/css/styles.css
@@ -19,4 +19,5 @@
 @import 'components/user-msg.css';
 @import 'components/ribbon.css';
 @import 'components/home-page.css';
+@import 'components/about-page.css';
 @import 'components/footer.css';
