--- a/css/basic/base.css
+++ b/css/basic/base.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap');
+
 * {
   box-sizing: border-box;
   margin: 0;
