--- a/css/components/book-details.css
+++ b/css/components/book-details.css
@@ -20,9 +20,8 @@
 }
 
 .book-desc .btn {
-  position: absolute;
-  right: 10px;
-  bottom: 10px;
+  text-decoration: none;
+  font-size: 0.8rem;
 }
 
 .book-details .author {
