--- a/css/components/book-list.css
+++ b/css/components/book-list.css
@@ -17,6 +17,7 @@
   color: inherit;
   padding: 0;
   margin: 0;
+  height: 100%;
 }
 
 .card {
@@ -42,7 +43,11 @@
 
 .book-preview {
   width: 100%;
+  height: 100%;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .book-preview img {
