--- a/css/components/header.css
+++ b/css/components/header.css
@@ -27,10 +27,11 @@ header {
   text-decoration: none;
   font-size: 1em;
   text-transform: uppercase;
-  font-weight: 400;
+  font-weight: 700;
   display: inline-block;
   width: 5rem;
   transition: all 0.2s ease-in-out;
+  font-family: 'Cinzel', serif;
 }
 
 .header .nav-bar a:hover {
