--- a/css/components/home-page.css
+++ b/css/components/home-page.css
@@ -4,8 +4,12 @@
   padding: 64px;
 }
 
+.home-page img {
+  width: 30%;
+}
+
 .home-page h1 {
-  font-size: 4rem;
+  font-size: 2.5rem;
   font-family: Roboto-bold, sans-serif;
   font-weight: 700;
   /* color: var(--primary-color); */
@@ -13,12 +17,12 @@
 }
 
 .home-page h2 {
-  font-size: 2.2rem;
+  font-size: 1.2rem;
   color: var(--gray2);
   margin-block-end: 5rem;
 }
 
 .headings .btn {
-  padding: 20px;
-  font-size: 1.2rem;
+  padding: 1rem;
+  font-size: 1rem;
 }
