Updated some css

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,4 +20,5 @@
 @import 'components/ribbon.css';
 @import 'components/home-page.css';
 @import 'components/about-page.css';
+@import 'components/book-add.css';
 @import 'components/footer.css';
