--- a/css/components/book-filter.css
+++ b/css/components/book-filter.css
@@ -1,8 +1,8 @@
 .book-filter {
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  gap: 1.2rem;
+  align-items: flex-start;
+  gap: 0.5rem;
   margin-bottom: 1.2rem;
 }
 
