Some more css and layout updates

--- a/css/components/home-page.css
+++ b/css/components/home-page.css
@@ -13,7 +13,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-family: 'Cinzel', serif;
+  /* font-family: 'Cinzel', serif; */
 }
 
 .home-page img {
