--- a/css/components/book-details.css
+++ b/css/components/book-details.css
@@ -17,6 +17,8 @@
 
 .book-desc {
   position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
 .book-desc .btn {
@@ -57,9 +59,8 @@
 
 .more-details {
   display: flex;
-  justify-content: space-between;
   width: 100%;
-  margin-block-end: 0.8rem;
+  margin-block-end: 1rem;
 }
 
 .more-details .detial {
@@ -74,4 +75,21 @@
   padding: 3px;
   background-color: #b2f2bb;
   margin-inline-end: 0.2rem;
+}
+
+.action-btns {
+  position: absolute;
+  bottom: 10px;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.action-btns a {
+  margin-inline-end: 1rem;
+}
+
+.published {
+  color: var(--gray2);
+  margin-block-end: 0.5rem;
 }
